# FdF

./: CMakeLists.txt  Makefile  README.md  author  color.c  draw_window.c  events.c  extras.c  fdf.h  keycodes.h  line_draw.c  main.c  matrix.c  mouse_events.c  notes  pointlist.c  read_write.c  tools.c  window.c  wu.c  wu_utils.c
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_count_if.c  ft_fswap.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+27 more)
include/: fdf.h
minilibx/: Makefile
src/: color.c  events.c  extras.c  line_draw.c  main.c  matrix.c  mouse_events.c  pointlist.c  read_write.c  tools.c  window.c  wu.c  wu_utils.c
test_maps/: 42.fdf  me.fdf  pnp_flat.fdf  pyramide.fdf
