cmake_minimum_required(VERSION 3.10)
project(FdF)
file(GLOB SOURCES "Libft/*.c")
add_executable(FdF main.c pointlist.c draw_window.c tools.c)
add_library(ft STATIC ${SOURCES})
target_link_libraries(FdF ft)
target_link_libraries(FdF /usr/local/lib/libmlx.a)
target_link_libraries(FdF "-framework OpenGL")
target_link_libraries(FdF "-framework AppKit")
