cmake_minimum_required(VERSION 3.10)
project(FdF)
file(GLOB SOURCES "Libft/*.c")
add_executable(FdF main.c pointlist.c window.c tools.c color.c read_write.c line_draw.c events.c keycodes.h matrix.c wu.c)
add_library(ft STATIC ${SOURCES})
include_directories(/usr/local/include)
target_link_libraries(FdF ft)
target_link_libraries(FdF /usr/local/lib/libmlx.a)
target_link_libraries(FdF "-framework OpenGL")
target_link_libraries(FdF "-framework AppKit")