cmake_minimum_required(VERSION 3.10)
project(FdF)
file(GLOB SOURCES "Libft/*.c")
add_executable(FdF src/main.c src/pointlist.c src/window.c src/tools.c src/color.c src/read_write.c src/line_draw.c src/events.c include/keycodes.h
        src/matrix.c src/wu.c src/extras.c src/events_mouse.c src/wu_utils.c)
add_library(ft STATIC ${SOURCES})
include_directories(/usr/local/include)
include_directories(/usr/local/include)
target_link_libraries(FdF ft)
target_link_libraries(FdF /usr/local/lib/libmlx.a)
target_link_libraries(FdF "-framework OpenGL")
target_link_libraries(FdF "-framework AppKit")